# example-cosmos-eth-bridge

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  package-lock.json  remappings.txt
component/: Cargo.toml
component/src/: bindings.rs  lib.rs
config/: cli.toml  wavs.toml
contracts/cosmwasm/: Cargo.toml
contracts/cosmwasm/src/: event.rs  lib.rs  state.rs
contracts/cosmwasm/src/entry/: execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs
contracts/solidity/: Submit.sol  Types.sol  package-lock.json
cosmos-client/: Cargo.toml
cosmos-client/src/: args.rs  deploy.rs  deposit.rs  main.rs
handler-deploy/: DeployHandler.s.sol  foundry-keystore
justfiles/: backend.just  bridge.just  build.just  deploy.just  vars.just
