[workspace]
members = [
  "contracts/cosmwasm",
  "component",
  "cosmos-client",
]
resolver = "2"


[workspace.package]
edition = "2021"
version = "0.2.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
rust-version = "1.81.0"
repository = "https://github.com/Lay3rLabs/cosmos-eth-bridge"
description = "Layer AVS Cosmos -> Eth Bridge Example"

[workspace.dependencies]
# Local
trigger-contract = { path = "contracts/cosmwasm" }

# WASI
wasi = "0.13.3"
wit-bindgen = "0.38.0"
wit-bindgen-rt = "0.38.0"
wstd = "0.4.0"

# Async
tokio = {version = "1.43.0", features = ["full"]}
async-trait = "0.1.85"

# Error handling
anyhow = "1.0.95"

# CLI
clap = {version = "4.5.27", features = ["derive"]}
dotenvy = {version = "0.15.7", features = ["cli"]}

# Cosmos
layer-climb = "0.3.7" 
layer-climb-cli = "0.3.7" 
cw-utils = "2.0.0"
cosmwasm-std = "2.2.0"
cw-storage-plus = "2.0.0"
cosmwasm-schema = "2.2.0"
cw2 = "2.0.0"

# Ethereum
alloy = {version = "0.9.2", features = ["full"]}
alloy-rlp = {version = "0.3.10", features = ["derive"]}
alloy-primitives = "0.8.15"
alloy-sol-macro = "0.8.15"
alloy-sol-types = "0.8.15"
alloy-rpc-types = "0.9.2"
alloy-json-rpc = "0.9.2"
alloy-provider = "0.9.2"
alloy-transport-http = "0.9.2"
alloy-transport = "0.9.2"
alloy-rpc-client = "0.9.2"

# Logging
tracing-subscriber = {version ="0.3.19", features = ["env-filter"]}
tracing = "0.1.41"

# Networking
reqwest = {version = "0.12.12", features=["json"]}
tower-service = "0.3.3"
url = "2.5.4"

# Data formats
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
hex = "0.4.3"
toml = "0.8.19"

# Misc
cfg-if = "1.0.0"