[package]
name = "bridge"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trigger-contract = {workspace = true}
cosmwasm-std = {workspace = true}
anyhow = {workspace = true} 
cw-storage-plus = {workspace = true} 
cw2 = {workspace = true} 
cosmwasm-schema = {workspace = true}
hex = {workspace = true}
wit-bindgen-rt = {workspace = true}
alloy-sol-macro = {workspace = true}
alloy-sol-types = {workspace = true}
alloy-primitives = {workspace = true}

[package.metadata.component]
package = "wavs:cosmos-eth-bridge"
target = "wavs:worker/layer-trigger-world@0.3.0-alpha1"