[package]
name = "cosmos-client"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
trigger-contract = { workspace = true }
layer-climb = { workspace = true }
layer-climb-cli = { workspace = true }
serde = { workspace = true } 
serde_json = {workspace = true} 
anyhow = {workspace = true}
clap = { workspace = true}
cosmwasm-std = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true} 
tokio = {workspace = true}
toml = {workspace = true}
alloy-primitives = {workspace = true}